--- a/netflix.yaml
+++ b/netflix.yaml
@@ -31,3 +31,6 @@ payload:
   - IP-CIDR,34.210.42.111/32,no-resolve
   - IP-CIDR,52.89.124.203/32,no-resolve
   - IP-CIDR,54.148.37.5/32,no-resolve
+  - IP-CIDR,203.75.84.20/32,no-resolve
+  - IP-CIDR,203.75.84.8/32,no-resolve
+  - GEOIP,netflix,no-resolve
